[gd_scene load_steps=9 format=3 uid="uid://b51lnxkw8w5uf"]

[ext_resource type="Script" path="res://scripts/main_control.gd" id="1_6rt1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot1mf"]
bg_color = Color(0.294118, 0.309804, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dca08"]
bg_color = Color(0.6, 0.298039, 0.6, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6tde"]
bg_color = Color(0.6, 0.298039, 0.6, 0.490196)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ps4u2"]
bg_color = Color(0.6, 0.298039, 0.6, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jejd6"]
bg_color = Color(0.6, 0.298039, 0.6, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxffo"]
bg_color = Color(0.6, 0.298039, 0.6, 0.490196)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3o7j"]
bg_color = Color(0.6, 0.298039, 0.6, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rt1i")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ot1mf")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Delete Save Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dca08")
theme_override_styles/hover = SubResource("StyleBoxFlat_o6tde")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ps4u2")
text = "Delete Save
"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Game title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Continue Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_jejd6")
theme_override_styles/hover = SubResource("StyleBoxFlat_hxffo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h3o7j")
text = "Continue"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="New Game Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_jejd6")
theme_override_styles/hover = SubResource("StyleBoxFlat_hxffo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h3o7j")
text = "New Game"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Exit Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_jejd6")
theme_override_styles/hover = SubResource("StyleBoxFlat_hxffo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h3o7j")
text = "Exit
"

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Delete Save Button" to="." method="_on_delete_save_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Continue Button" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/New Game Button" to="." method="_on_new_game_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Exit Button" to="." method="_on_exit_button_button_up"]
